# marketplace

./: .dockerignore  .env.prod.example  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
README/: Marketplace API.yaml
marketplace/auth_app/: serializers.py  tests.py  urls.py  utils.py  views.py
marketplace/basket_app/: admin.py  apps.py  models.py  serializers.py  urls.py  utils.py  views.py
marketplace/basket_app/migrations/: 0001_initial.py  0002_alter_basketitem_options.py  0003_alter_basketitem_added_at_alter_basketitem_basket_and_more.py
marketplace/catalog_app/: admin.py  apps.py  forms.py  models.py  serializers.py  urls.py  utils.py  views.py
marketplace/catalog_app/csv_json_files/: new_categories.csv  (+1 more)
marketplace/fixtures/: Manual_for_db_dump.md  db_data_fixture.json  fixture_utils.py
marketplace/mainsite/: handle_errors.py  main_logger.py  middleware.py  open_api_utils.py  settings.py  urls.py
marketplace/orders_app/: admin.py  apps.py  handle_cases.py  models.py  serializers.py  tests.py  urls.py  utils.py  views.py
marketplace/products_app/: admin.py  apps.py  filters.py  forms.py  models.py  pagination.py  serializers.py  tests.py  urls.py  views.py
marketplace/profile_app/: admin.py  apps.py  forms.py  models.py  serializers.py  urls.py  utils.py  views.py
marketplace/tags_app/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
nginx/: default.conf  nginx.conf
postgres/: Dockerfile  pg_hba.conf  postgresql.conf
postgres/db_backup/: 2025-07-28_db.dump  2025-07-31_db.dump  2025-08-10_db.sql
(+32 files in other folders)
